--- a/style.css
+++ b/style.css
@@ -58,16 +58,27 @@ h2{
 button{
     margin-top: 5px;
     padding:6px;
-    background-color: rgba(136, 64, 21, 0.6);
+    background-color: rgba(68, 161, 50, 0.856);
     border-radius: 4px;
     cursor: pointer;
     font-size: 0.8em;
     align-self: flex-end;
     color: white;
+    box-shadow: 10%;
+}
+
+.btn-editar{
+    font-size: 0.5em;
+    background-color: rgba(8, 5, 14, 0.6); ;
+}
+
+.btn-apagar{
+    font-size: 0.5em;
+    background-color: rgba(247, 35, 7, 0.9);     
 }
 
 button:hover {
-    background-color: rgba(136, 64, 21, 1);
+    background-color: rgb(74, 5, 233);
 }
 
 #output {
@@ -81,37 +92,29 @@ button:hover {
     padding: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.5em;
-    background-color: beige;
+    background-color: rgb(7, 221, 157);
     border-radius: 40px;
     box-shadow: inset 0px 0px 5px 10px rgba(0, 0, 0, 0.4);
     text-align: center;
 }
 
 table{
-    border: 2.5px solid rgb(96, 70, 13);
+    border: 2.5px solid rgb(70, 6, 245);
     margin: 1em 0 0 0;    
     border-spacing: 0;
+    box-shadow: 90px;
 }
 
 th, td, tr{
-    border: 2.5px solid rgb(96, 70, 13);
+    border: 2.5px solid rgb(101, 6, 255);
     margin: 0;
-    padding: 10px 40px;
+    padding: 10px 20px;
     border-spacing: 0;
     line-height: 1.5em;
 }
 
-.btn-editar{
-    font-size: 0.6em;
-    background-color: rgba(136, 64, 21, 0.6); ;
 
-}
 
-.btn-apagar{
-    font-size: 0.6em;
-    background-color: rgba(220, 38, 13, 0.9); ;
-
-}
 
 .tabela {
     padding: 0;
@@ -127,18 +130,18 @@ input {
     margin: 0.3em 0;
 }
 
-#btn-inserir{
+#btn-inserir, #btn-salvar{
     background-color: rgb(60, 60, 248);
     color: white;
 }
 
-#btn-inserir:hover{
+#btn-inserir:hover, #btn-salvar:hover{
     background-color: rgb(29, 29, 173);
     color: white;
     cursor: pointer;
 }
 
-#btn-inserir:active{
+#btn-inserir:active, ##btn-salvar:active{
     background-color: rgb(104, 104, 222);
     color: white;
 }
