--- a/style.css
+++ b/style.css
@@ -55,30 +55,21 @@ h2{
     display: block;
 }
 
+
+
 button{
     margin-top: 5px;
     padding:6px;
-    background-color: rgba(68, 161, 50, 0.856);
+    background-color: rgba(243, 3, 3, 0.6);
     border-radius: 4px;
     cursor: pointer;
     font-size: 0.8em;
     align-self: flex-end;
     color: white;
-    box-shadow: 10%;
-}
-
-.btn-editar{
-    font-size: 0.5em;
-    background-color: rgba(8, 5, 14, 0.6); ;
-}
-
-.btn-apagar{
-    font-size: 0.5em;
-    background-color: rgba(247, 35, 7, 0.9);     
 }
 
 button:hover {
-    background-color: rgb(74, 5, 233);
+    background-color: rgb(253, 1, 1);
 }
 
 #output {
@@ -92,29 +83,35 @@ button:hover {
     padding: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.5em;
-    background-color: rgb(7, 221, 157);
+    background-color: rgb(4, 204, 121);
     border-radius: 40px;
     box-shadow: inset 0px 0px 5px 10px rgba(0, 0, 0, 0.4);
     text-align: center;
 }
 
 table{
-    border: 2.5px solid rgb(70, 6, 245);
+    border: 2.5px solid rgb(18, 4, 150);
     margin: 1em 0 0 0;    
     border-spacing: 0;
-    box-shadow: 90px;
 }
 
 th, td, tr{
-    border: 2.5px solid rgb(101, 6, 255);
+    border: 2.5px solid rgb(54, 7, 223);
     margin: 0;
-    padding: 10px 20px;
+    padding: 10px 40px;
     border-spacing: 0;
     line-height: 1.5em;
 }
 
+.btn-editar{
+    font-size: 0.6em;
+    background-color: rgba(7, 10, 173, 0.6)
+}
 
-
+.btn-apagar{
+    font-size: 0.6em;
+    background-color: rgba(172, 4, 4, 0.9)
+}
 
 .tabela {
     padding: 0;
@@ -131,17 +128,17 @@ input {
 }
 
 #btn-inserir, #btn-salvar{
-    background-color: rgb(60, 60, 248);
+    background-color: rgb(11, 11, 212);
     color: white;
 }
 
 #btn-inserir:hover, #btn-salvar:hover{
-    background-color: rgb(29, 29, 173);
+    background-color: rgb(87, 87, 168);
     color: white;
     cursor: pointer;
 }
 
-#btn-inserir:active, ##btn-salvar:active{
-    background-color: rgb(104, 104, 222);
+#btn-inserir:active, #btn-salvar:active{
+    background-color: rgb(17, 5, 187);
     color: white;
 }
